--- a/themes/benke/theme.toml
+++ b/themes/benke/theme.toml
@@ -1,10 +1,8 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/spf13/hugoThemes#themetoml for an example
 
 name = "Benke"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
+licenselink = "https://github.com/benjick/maxmalm.se/tree/master/themes/benke/LICENSE.md"
+description = "Google MDL blog in Hugo"
 homepage = "http://maxmalm.se/"
 tags = ["Material Design", ""]
 features = ["Lists", "Post"]
